--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,5 +1,10 @@
 /* --- HTML elements --- */
+@font-face{
+    font-family: butler;
+    src: url(../fonts/Butler_Medium.otf);
+}
 body{
+    font-family: "Baskerville Old Face";
     padding: 0;
     margin: 0;
 }
@@ -66,15 +71,21 @@ header{
     padding-left: 10px;
 
 }
+
 .TopNav-ul a{ 
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     color: #005D9C;
 }
+
 .TopNav-ul a:hover {
     color: #ECEEEC;
 }
+.TopNav-ul .active{
+    color:black;
+}
+
 /* --- Footer --- */
 footer{
     display: flex;
