--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -36,7 +36,7 @@ header{
 .Logo-div{
     display:flex;
     flex: 0 0  auto;
-    align-self: flex-start;
+    align-self:center;
 }
 .Logo-img{
     height:50px;
@@ -126,20 +126,14 @@ header{
 .StorefrontPic{
     display: flex;
     flex: 0 0 auto;
-    padding: 3%;
     margin: 3% 9%;
     justify-content: center;
-    background-color: #555757;
     border: 1px ridge #E4DBC0;
-    /* box-shadow:  20px 10px 30px rgba(0, 94, 156, 0.438); */
 }
 
 .HomeInfo-div{
     padding: 0 6%;
     margin: 0 9%;
-    background-color: #555757;
-    border: 1px ridge #E4DBC0;
-    /* box-shadow:  20px 10px 30px rgba(0, 94, 156, 0.438); */
 }
 .Home-bottomContainer{
     display: flex;
@@ -152,17 +146,42 @@ header{
     flex-flow: row nowrap;
     flex: 0 1 auto;
     margin: 2% 6%;
-    padding: 0 10% 0 5%;
-    background-color: #555757;
-    border: 1px ridge #E4DBC0;
-    /* box-shadow:  20px 10px 30px rgba(0, 94, 156, 0.438); */
+
 
 }
 .Welcome-message{
     flex: 1 1 auto;
+    padding-right: 3%
 }
 .Welcome-contact{
     flex: 1 0 auto;
+    padding: 3%;
+    text-align: center;
+}
+
+/* --- Directions page --- */
+.Directions-div{
+    display: flex;
+    justify-content: space-evenly;
+}
+.Map-div{
+    flex: 0 1 auto;
+    border: 1px ridge #555757;
+}
+.Directions-Info-div{
+    display: flex;
+    flex-flow: column wrap;
+    flex: 0 1 auto;
+    justify-content: center;
+    text-align: center;
+}
+.Directions-Info-Logo{
+    flex: 0 1 auto;
+    align-self: center;
+}
+.Directions-Info-h2{
+    flex: 0 1 auto;
+
 }
 
 
