--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -104,9 +104,9 @@ header{
 }
 .Home-topContainer{
     display: flex;
-    flex: 3 0 auto;
+    flex: 2 0 auto;
     flex-flow: row wrap ;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 .Home-top-left{
     display: flex;
@@ -123,12 +123,12 @@ header{
 
 }
 
-.StorefrontPic{
+.Img{
     display: flex;
-    flex: 0 0 auto;
-    margin: 3% 9%;
+    flex: 1 1 auto;
+    margin: 30px 0 30px 60px;
     justify-content: center;
-    border: 1px ridge #E4DBC0;
+    border: 1px ridge #555757;
 }
 
 .HomeInfo-div{
