--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -8,12 +8,15 @@ body{
     padding: 0;
     margin: 0;
 }
+
+img {
+    max-width: 100%;
+}
 /* --- Layout --- */
 .mainContainer{
     display: flex;
     flex-flow: column wrap;
     background-color: #ECEEEC;
-    margin: .5em 5em;
     border: 4px outset #E4DBC0;
 }
 /* --- Header --- */
@@ -47,12 +50,13 @@ header{
     color: #d2181f;
 }
 
-.PhoneNum-h2{
-    color: #d2181f;
-    flex: 0 0  auto;
-    align-self: center;
-    margin: 0;
-  
+.PhoneNumber{
+    color: #FFF;
+    background: blue;
+    padding: 8px 24px;
+    text-decoration: none;
+    border-radius: 4px;
+    font-weight: bold;
 }
 
 .Address-h2{
@@ -94,7 +98,9 @@ header{
 }
 /* --- Layout --- */
 .LayoutSection{
-    margin: 20px 10px;
+    max-width:1200px;
+    margin:20px auto;
+
 }
 /* --- Home page --- */
 .Home-Container{
@@ -108,27 +114,13 @@ header{
     flex-flow: row wrap ;
     justify-content: space-between;
 }
-.Home-top-left{
-    display: flex;
-    flex: 1 0 auto;
-    flex-flow: column wrap;
-    justify-content: center;
-}
+
 .Home-top-right{
     display: flex;
     flex: 1 0 auto;
     flex-flow: column wrap;
     justify-content: center;
     text-align: center;
-
-}
-
-.Img{
-    display: flex;
-    flex: 1 1 auto;
-    margin: 30px 0 30px 60px;
-    justify-content: center;
-    border: 1px ridge #555757;
 }
 
 .HomeInfo-div{
