--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -18,6 +18,7 @@ img {
 }
 iframe{
     max-width: 100%;
+    width: 100%;
 }
 a{
     text-decoration: none;
@@ -56,11 +57,19 @@ p{
 
 header{
     background-color: #E4DBC0;
-    display: flex;
-    justify-content: space-around;
-    flex-flow: row wrap;
-    padding-top: .5em;
 }
+.header-container{
+    max-width:1200px;
+   display: flex;
+   flex-flow: row wrap;
+   justify-content: center;
+    
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%
+  }
 
 .Logo-div{
     display:flex;
@@ -96,11 +105,7 @@ header{
 .PhoneNumber:hover{
     border:2px solid #ECEEEC;
 }
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%
-  }
+
  
 
 /* --- Home page --- */
@@ -117,11 +122,7 @@ header{
     align-items: center;
 }
 .Home-top-right{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
     text-align: center;
-    flex: 1 0;
 }
 .Home-bottomContainer{
     display: flex;
@@ -188,15 +189,14 @@ footer{
     display: flex;
     color: #d2181f;
     justify-content: center;
-    padding: 0 20px;
 }
 .footer-slogan h4{
-    border-top: solid 1px#d2181f;
-    padding-top: .5em;
+    border-bottom: solid 1px#d2181f;
+    padding-bottom: .5em;
 }
 .footer-bottom{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 .SocialIcons-div{
@@ -210,7 +210,6 @@ footer{
 .Address-h2{
     color: #d2181f;
     align-self: center;
-    padding: 0 20px;
 } 
 .text-red{
     color:#d2181f;
@@ -235,18 +234,20 @@ footer{
 
 @media (min-width: 500px) {
 /*--- HTML elements ---*/
-h2{
+/* h2{
     margin-top: 30px;
-}
+} */
 
 /* --- Layout --- */
 .LayoutSection{
     margin: 120px 20% 0 20%;
 }
+
 /* --- AboveTheFold --- */
 .HomeInfo-div h2{
     margin-top: 0;
-}
+}/* --- header --- */
+
 
 /* --- Directions ---0 */
 .Directions-div{
@@ -257,6 +258,7 @@ h2{
 /* --- Gallery --- */
 .ImageLoop-img{
     margin-bottom: 20px;
+    width: 30%;
 }
 
 /* --- About --- */
@@ -266,10 +268,28 @@ h2{
 
 /* --- footer --- */
 footer{
-    padding: 1% 10% 0;
+    padding: 1% 20% 0;
     margin-top: 20px;
 }
 
-/* end min-width 500 */
+/* end min-width 600 */
+}
+/* do not delete */
+
+@media (min-width: 900px){
+
+/* --- header --- */
+.header-container{
+    margin: 0 20%;
+    justify-content: space-between;
+}
+
+/* --- Gallery --- */
+.ImageLoop-img{
+    margin-bottom: 10px;
+    width: 22%;
+}
+
+/* end min-width 900 */
 }
 /* do not delete */
