--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -60,9 +60,13 @@ header{
 }
 .header-container{
     max-width:1200px;
-   display: flex;
-   flex-flow: row wrap;
-   justify-content: center;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    /* margin: 0 10%; */
+    margin-top: .5em;
+    
+    
     
 }
 .sticky {
@@ -93,7 +97,7 @@ header{
 .header-call-today-h2{
     display: flex;
     color: #d2181f;
-    margin-right: 25px;
+    margin-left: 0;
 }
 .PhoneNumber{
     color: #ECEEEC;
@@ -238,6 +242,11 @@ footer{
     margin-top: 30px;
 } */
 
+/* --- header --- */
+.header-container{
+    margin: 1% 10% 0 20%;
+
+}
 /* --- Layout --- */
 .LayoutSection{
     margin: 120px 20% 0 20%;
@@ -276,11 +285,17 @@ footer{
 }
 /* do not delete */
 
-@media (min-width: 900px){
+@media (min-width: 1100px){
 
 /* --- header --- */
 .header-container{
-    margin: 0 20%;
+    margin: 1% 20% 0 20%;
+    justify-content: space-between;
+}
+
+/* --- Home page --- */
+
+.AboveTheFold-div{
     justify-content: space-between;
 }
 
@@ -290,6 +305,6 @@ footer{
     width: 22%;
 }
 
-/* end min-width 900 */
+/* end min-width 1100 */
 }
 /* do not delete */
