--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -144,6 +144,7 @@ header{
     display: flex;
    flex-flow: column;
    justify-content: center;
+   
 }
 .ImageLoop-div{
     display: flex;
@@ -152,7 +153,7 @@ header{
     align-items: center;
 }
 .ImageLoop-img{
-    width: 49%;
+    /* width: 49%; */
 }
 
 
